--- a/styles.css
+++ b/styles.css
@@ -2,5 +2,8 @@ img {
     border-radius: 50%;
     width: 200px;
     height: 200px;
-    margin: 20px 0;
+    margin: 20px 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
