--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,14 @@ img {
     margin-left: auto;
     margin-right: auto;
   }
+
+  .projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 20px;
+    border-style: dotted;
+    border-radius: 3%;
+    border-color: #00FFFF ;
+    opacity: 0.7;
+  }
