--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap');
+
+body{
+    padding: 30px;
+}
+#name{
+    font-family: 'Cinzel Decorative', cursive;
+}
+
 img {
     border-radius: 50%;
     width: 200px;
