--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
 body{
     padding: 30px;
 }
 #name{
     font-family: 'Cinzel Decorative', cursive;
 }
-
+h2{
+    font-family: 'Italiana', serif;
+}
 img {
     border-radius: 50%;
     width: 200px;
@@ -26,4 +28,7 @@ img {
     border-radius: 3%;
     border-color: #00FFFF ;
     opacity: 0.7;
+  }
+  ul{
+    line-height: 1.6;
   }
