--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
 body{
     padding: 30px;
+    background-image: url("./images/white-bg.jpg");
 }
 #name{
     font-family: 'Cinzel Decorative', cursive;
